--- a/blueprint/thermostat_tpi.yaml
+++ b/blueprint/thermostat_tpi.yaml
@@ -46,7 +46,7 @@ blueprint:
       selector:
         entity:
           domain: binary_sensor
-          device_class: opening
+          device_class: window
     entity_puissance:
       name: Puissance
       description: Champ d'affichage de la puissance (input_number)
